# Personal-AI-Employee

./: .env.example  .gitignore  .rgignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  opencode.json  orchestrator.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  watcher.py
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: FILE_yoo_20260303_000937.md  FILE_yoo_20260303_000947.md  FILE_yoo_20260303_000950.md  FILE_yoo_20260303_004956.md
AI_Employee_Vault/Logs/: today.md
AI_Employee_Vault/Needs_Action/: FILE_test_20260303_005429.md  FILE_yoo_20260303_005149.md
AI_Employee_Vault/Plans/: plan_FILE_yoo_20260303_000937.md  plan_FILE_yoo_20260303_000947.md  plan_FILE_yoo_20260303_000950.md  plan_FILE_yoo_20260303_004956.md
config/: mcp.json
docs/: PROGRESS.md  Personal AI Employee Hackathon 0_ Building Autonomous FTEs in 2026.docx  SETUP.md
mcp_servers/: odoo_mcp.py  socials_mcp.py
mcp_servers/email/: server.py
scheduler/: run_agent.ps1  setup_task.ps1
scripts/: post.ps1  ralph_loop.ps1  run.ps1  test_opencode_connectivity.ps1  watchdog.py
tests/: test_account_resolution.py  test_discord_state_transitions.py  test_frontmatter_coupling.py  test_telegram_state_transitions.py
vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
vault/Approved/: Invoice_ClientB_500_Approval.md
watchers/: approval_watcher.py  discord_approval_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  telegram_approval_watcher.py
(+19 files in other folders)
