[project]
name = "hackhaton-0"
version = "0.1.0"
description = "Personal AI Employee - Hackathon 0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.191.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]

