[project]
name = "personal-ai-employee"
version = "0.1.0"
description = "Local-first, human-in-the-loop autonomous agent that triages email, manages LinkedIn, and drafts business actions for human approval."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "google-api-python-client>=2.191.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]

